--- a/src/styles.css
+++ b/src/styles.css
@@ -40,8 +40,8 @@ ul {
 }
 
 ul li {
-  font-size: 2rem;
-  margin: 5px 0;
+  font-size: 3rem;
+  margin: 0;
 }
 
 .add-new-item-container {
@@ -62,7 +62,7 @@ input {
   font-size: 1.8rem;
 }
 
-.todo-items-container {
+.undo-items-container {
   width: 95%;
   background: #ada996;
   color: #fafafa;
@@ -73,6 +73,17 @@ input {
 .complete-items-container {
   width: 95%;
   background: #f2f2f2;
+  border-radius: 5px;
+}
+
+.list-group-item span {
+  margin-right: 20px;
+}
+
+.list-group-item span:focus {
+  outline: none;
+  background-color: white;
+  color: black;
   border-radius: 5px;
 }
 
